# Volguard

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  volguard_iv_surface_forecasting_eca4a5d2.plan.md
.github/workflows/: ci.yml
configs/: collector.yaml  curate.yaml  data.yaml  eval.yaml  features.yaml  surface.yaml
configs/models/: model_a.yaml
docs/: decisions.md  experiment-log.md
src/volguard/: __init__.py  cli.py  config.py
src/volguard/backtest/: __init__.py
src/volguard/collector/: __init__.py  deribit_client.py  poller.py
src/volguard/collector/deploy/: README.md  bootstrap.sh  volguard-collector.service  volguard-sync.service  volguard-sync.timer
src/volguard/curate/: __init__.py  blackiv.py  filters.py  forwards.py  normalize.py  pipeline.py  schemas.py  validate_tardis.py  window.py
src/volguard/datasets/: __init__.py  leakage.py  pca.py  schemas.py  splits.py  types.py  windows.py
src/volguard/evaluation/: __init__.py  diagnostics.py  dm.py  harness.py  metrics.py  regimes.py  weights.py
src/volguard/experiments/: __init__.py  pipeline.py  provenance.py  registry.py  store.py
src/volguard/features/: __init__.py  calendar.py  market.py  pipeline.py  realized.py  schemas.py  surface_factors.py  surface_quality.py  types.py
src/volguard/ingest/: __init__.py  client.py  deribit_history.py  schemas.py  tardis_free.py  underlying.py
src/volguard/models/: __init__.py  fold_runner.py  inputs.py  types.py
src/volguard/models/baselines/: __init__.py  b0.py  b1.py  b2.py  b3.py  b4.py  common.py
src/volguard/surface/: __init__.py  arbitrage.py  arbitrage_metrics.py  calendar_fit.py  fit.py  grid.py  pipeline.py  qc.py  repair.py  schemas.py  ssvi.py  svi.py  types.py
src/volguard/viz/: __init__.py
tests/: test_arbitrage.py  test_blackiv.py  test_cli_curate.py  test_collector.py  test_curate_config.py  test_filters.py  test_forwards.py  test_ingest_history.py  test_ingest_tardis.py  test_ingest_underlying.py  test_iv_crosscheck.py  test_m5_contracts.py  test_m5_datasets.py  test_m5_feature_math.py  test_m5_feature_pipeline.py  test_m5_surface_quality.py  test_m6_artifacts.py  test_m6_baselines.py  test_m6_contracts.py  test_m6_evaluation.py  test_m6_fold_runner.py  test_m6_repair.py  test_normalize.py  test_pipeline.py  test_quotes_norm_schema.py  test_scaffold.py  test_surface_golden.py  test_svi.py  test_validate_tardis.py  test_window.py
tests/fixtures/: surface_golden.parquet  surface_quotes_norm.parquet  tardis_sample.csv
