[project]
name = "volguard"
version = "0.0.1"
description = "Arbitrage-aware implied-volatility surface forecasting on Deribit BTC options."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "VolGuard" }]

# Core runtime deps kept light so `uv sync` and CI stay fast. cvxpy+osqp are
# core (the repair QP is part of the M1 math core, exercised by tests/CI);
# heavy ML/plotting deps live in optional groups below.
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "polars>=1.0",
    "duckdb>=1.0",
    "pyarrow>=16.0",
    "pandera[polars]>=0.20",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    # Convex arbitrage-repair QP — core to the surface pipeline (M1) and the
    # universal repair layer, so it must be present for tests/CI, not optional.
    "cvxpy>=1.5",
    "osqp>=0.6",
]

[project.optional-dependencies]
# Modeling stack (torch etc). Install with: uv sync --extra ml
ml = [
    "torch>=2.3",
]
# Plotting / reporting. Install with: uv sync --extra viz
viz = [
    "matplotlib>=3.9",
    "plotly>=5.22",
]
# Live collector (async poller). Install with: uv sync --extra collector
collector = [
    "aiohttp>=3.9",
]

[project.scripts]
volguard = "volguard.cli:app"

[dependency-groups]
# Dev tooling installed by default with `uv sync`.
dev = [
    "ruff>=0.6",
    "pyright>=1.1.370",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/volguard"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "PL",  # pylint
    "RUF", # ruff-specific
]
ignore = [
    "PLR0913", # too many arguments — common in numerical/config code
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"] # magic values are fine in tests

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "golden: end-to-end regression tests against committed fixtures",
]

[tool.coverage.run]
source = ["src/volguard"]
branch = true
